infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft-server-prod
  labels:
    app.kubernetes.io/name: minecraft-server
    app.kubernetes.io/part-of: minecraft-server
