infra/kubernetes/base/service-game.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-server-game
  namespace: minecraft-server-prod
  labels:
    app.kubernetes.io/name: mc-server
    app.kubernetes.io/component: servidor-jogo
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: mc-server
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
      protocol: TCP
