infra/kubernetes/base/service-rcon.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-server-rcon
  namespace: minecraft-server-prod
  labels:
    app.kubernetes.io/name: mc-server
    app.kubernetes.io/component: servidor-jogo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mc-server
  ports:
    - name: rcon
      port: 25575
      targetPort: 25575
      protocol: TCP
